[package]
name = "p0w"
description = "Merkle tree Proof-of-Work (PoW)"
version = "0.2.2"
homepage = "https://github.com/r3v2d0g/p0w"
repository = "https://github.com/r3v2d0g/p0w.git"
documentation = "https://docs.rs/p0w"
keywords = []
categories = []
readme = "README.md"
license = "MPL-2.0"
authors = ["Matthieu Le brazidec (r3v2d0g) <r3v2d0g@jesus.gg>"]
edition = "2018"

[features]
default = ["parallel", "thiserror"]
parallel = ["rayon"]

[dependencies]
blake3 = "0.3"
rand = "0.7"
rand_chacha = "0.2"

[dependencies.rayon]
version = "1.3"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.thiserror]
version = "1.0"
optional = true

[dev-dependencies]
proptest = "0.10"
